# MeetingSystem

./: .gitignore  AWS_EC2_DEPLOYMENT.md  CLOUDFLARE_TUNNEL_SETUP.md  CMakeLists.txt  Dockerfile  LATEST_UPDATES.md  PRESENTATION_PROMPT.md  hehe.txt  project_documentation.md  start.sh  test  tree.txt
MeetingSystem/: .gitignore  CMakeLists.txt
MeetingSystem/frontend/: index.html  lobby.html  meeting.html  package-lock.json
MeetingSystem/frontend/src/: App.jsx  index.css
MeetingSystem/frontend/src/components/: FilesPanel.jsx  VideoPanel.jsx  WhiteboardPanel.jsx
MeetingSystem/frontend/src/pages/: Lobby.jsx  Meeting.jsx
MeetingSystem/frontend/src/utils/: api.js
MeetingSystem/src/: main.cpp  test_api.sh  test_file.txt  test_file_upload.sh
MeetingSystem/src/managers/: AuthManager.cpp  AuthManager.h  ChatManager.cpp  ChatManager.h  FileManager.cpp  FileManager.h  MeetingManager.cpp  MeetingManager.h  ScreenShareManager.cpp  ScreenShareManager.h  WhiteboardManager.h
MeetingSystem/src/models/: Meeting.h  Message.h  WhiteboardElement.h
MeetingSystem/src/server/: HTTPServer.cpp  WebSocketServer.h
MeetingSystem/src/storage/: HashTable.cpp  HashTable.h  Page.h
MeetingSystem/src/utils/: Hash.cpp  Hash.h  JSON.h
MeetingSystem_Submission/: generate-certs.sh  start-https.sh
MeetingSystem_Submission/certs/: cert.pem  key.pem
MeetingSystem_Submission/frontend/: .gitignore  tailwind.config.js
MeetingSystem_Submission/frontend/public/: webrtc-test.html
MeetingSystem_Submission/frontend/src/: App.jsx
MeetingSystem_Submission/frontend/src/components/: FilesPanel.jsx
MeetingSystem_Submission/frontend/src/pages/: Login.jsx  Meeting.jsx
MeetingSystem_Submission/signaling-server/: Dockerfile  server.js
MeetingSystem_Submission/src/: main.cpp
MeetingSystem_Submission/src/managers/: AuthManager.h  ChatManager.cpp  FileManager.cpp  MeetingManager.cpp  WhiteboardManager.cpp
MeetingSystem_Submission/src/models/: File.h  Message.h  User.h
MeetingSystem_Submission/src/server/: HTTPServer.cpp  HTTPServer.h  WebSocketServer.cpp
MeetingSystem_Submission/src/utils/: Hash.cpp
MeetingSystem_Submission/tests/: test_storage.cpp
frontend/: .env.example  package-lock.json  package.json  vite.config.js
frontend/public/: webrtc-test.html
frontend/src/: App.jsx
frontend/src/components/: ChatPanel.jsx  FilesPanel.jsx  VideoPanel.jsx  WhiteboardPanel.jsx
frontend/src/pages/: Lobby.jsx  Meeting.jsx
frontend/src/utils/: api.js
signaling-server/: package-lock.json  package.json  server.js
src/: main.cpp
src/managers/: AuthManager.cpp  AuthManager.h  ChatManager.cpp  ChatManager.h  FileManager.cpp  FileManager.h  MeetingManager.cpp  MeetingManager.h  ScreenShareManager.h  WhiteboardManager.cpp  WhiteboardManager.h
src/models/: File.h  Meeting.h  Message.h  User.h  WhiteboardElement.h
src/server/: HTTPServer.cpp  HTTPServer.h
src/storage/: BTree.cpp  BTree.h  DatabaseEngine.cpp  DatabaseEngine.h  Page.h
src/utils/: Hash.cpp  Hash.h  JSON.h
